package app.entities;

/**
 * Represents a customer in the carport system.
 * <p>
 * Instances are created via the nested {@link Builder} class using the builder pattern,
 * which ensures all fields are set before the object is constructed.
 * </p>
 *
 * <pre>{@code
 * Customer customer = new Customer.Builder()
 *     .id(1)
 *     .firstName("John")
 *     .lastName("Doe")
 *     .email("john@example.com")
 *     .build();
 * }</pre>
 */
public class Customer {

    /** Unique identifier for the customer in the database. */
    private int id;

    /** Customer's email address, used for login and communication. */
    private String email;

    /** Street address of the customer. */
    private String address;

    /** Customer's first name. */
    private String firstName;

    /** Customer's last name. */
    private String lastName;

    /** Danish postal code (postnummer) for the customer's address. */
    private int postalCode;

    /** City corresponding to the customer's postal code. */
    private String city;

    /** Customer's phone number. */
    private String phoneNumber;

    /** Private constructor — use {@link Builder} to create instances. */
    private Customer() {
    }

    /**
     * Builder for constructing {@link Customer} instances.
     * <p>
     * Each setter method returns the builder itself to allow method chaining.
     * Call {@link #build()} when all desired fields have been set.
     * </p>
     */
    public static class Builder {
        private int id;
        private String email;
        private String address;
        private String firstName;
        private String lastName;
        private int postalCode;
        private String city;
        private String phoneNumber;

        /**
         * Sets the customer's database ID.
         *
         * @param id the unique identifier
         * @return this builder
         */
        public Builder id(int id) {
            this.id = id;
            return this;
        }

        /**
         * Sets the customer's email address.
         *
         * @param email the email address
         * @return this builder
         */
        public Builder email(String email) {
            this.email = email;
            return this;
        }

        /**
         * Sets the customer's street address.
         *
         * @param address the street address
         * @return this builder
         */
        public Builder address(String address) {
            this.address = address;
            return this;
        }

        /**
         * Sets the customer's first name.
         *
         * @param firstName the first name
         * @return this builder
         */
        public Builder firstName(String firstName) {
            this.firstName = firstName;
            return this;
        }

        /**
         * Sets the customer's last name.
         *
         * @param lastName the last name
         * @return this builder
         */
        public Builder lastName(String lastName) {
            this.lastName = lastName;
            return this;
        }

        /**
         * Sets the customer's postal code.
         *
         * @param postalCode the Danish postal code (postnummer)
         * @return this builder
         */
        public Builder postalCode(int postalCode) {
            this.postalCode = postalCode;
            return this;
        }

        /**
         * Sets the city corresponding to the customer's postal code.
         *
         * @param city the city name
         * @return this builder
         */
        public Builder city(String city) {
            this.city = city;
            return this;
        }

        /**
         * Sets the customer's phone number.
         *
         * @param phoneNumber the phone number
         * @return this builder
         */
        public Builder phoneNumber(String phoneNumber) {
            this.phoneNumber = phoneNumber;
            return this;
        }

        /**
         * Builds and returns a new {@link Customer} with the values set on this builder.
         *
         * @return a fully constructed {@link Customer} instance
         */
        public Customer build() {
            Customer customer = new Customer();
            customer.id = this.id;
            customer.email = this.email;
            customer.address = this.address;
            customer.firstName = this.firstName;
            customer.lastName = this.lastName;
            customer.postalCode = this.postalCode;
            customer.city = this.city;
            customer.phoneNumber = this.phoneNumber;
            return customer;
        }
    }

}
