package app.entities;

public class Material {
    //TODO make class and possibly underclasses when we know what goes into it
    int id;
    String name;
    String description;
    int price;
}
