package app.entities;

public class RoofStyle {
    int id;
    String name;
    String color;
    int price;
}
