package app.entities;

public class Specifications {
    int id;
    RoofType roofType;
    RoofStyle roofStyle;
    int widthCm;
    int lengthCm;
    int roofPitch;
}
