package app.entities;

public class Workshop {
    int id;
    int widthCm;
    int lengthCm;
}
