@startuml

class Customer {
    name
    email
    address
    postalCode
    city
    phone
}

class Order {
    remarks
}

class Specifications {
    roofType
    roofStyle
    widthCm
    lengthCm
    roofPitchDegree
}

class Workshop {
    widthCm
    lengthCm
}

class Material {
    name
    description
    price
}

class RoofStyle {
    name
    color
    pricePerM2
}
class User{
email
role
password
}

Customer "1" -- "many" Order : places
Order "1" -- "1" Specifications : has
Order "1" -- "0..1" Workshop : has
User "0..1" -- "1" Order : places
Order "many" -- "many" Material : contains
Specifications "many" -- "1" RoofStyle : has

@enduml